app/src/main/java/com/example/store/feature/auth/domain/errors/EmailError.kt
package com.example.store.feature.auth.domain.errors

import com.example.store.core.domain.Error

enum class EmailError : Error {
    FIELD_EMPTY,
    INVALID_EMAIL
}